order-service/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: order-service
  namespace: springboot-dev
spec:
  type: ClusterIP
  selector:
    app: order-service
  ports:
    - port: 80
      targetPort: 8080
